pointing to API Gateway SSL from React, as well using lb in the microservice